--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "audio-recorder-polyfill": "^0.4.1",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
+    "mp3-mediarecorder": "^4.0.5",
     "next": "14.2.4",
     "postcss": "8.4.38",
     "react": "18.3.1",
